--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,17 @@
 image: gitpod/workspace-java-21
 
+vscode:
+    extensions:
+        - vscjava.vscode-java-pack
+        - pleiades.java-extension-pack-jdk
+        - formulahendry.code-runner
+
 tasks:
+  - name: Install shellcheck
+    init: |
+      echo "📦 Installing shellcheck..."
+      sudo apt install shellcheck
+      echo "✅ shellcheck installed"
   - name: Install direnv
     init: |
       echo "📦 Installing direnv..."
